objects/ccpe_ppm__Cost__c.object
<CustomObject>
    <description>Object for collecting cost information relating to an investment</description>
    <fields>
        <fullName>ccpe_ppm__Area__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Area</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>project_cloud__Area__c.project_cloud__Area__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>project_cloud__Area__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Cost</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>project_cloud__Area__c</referenceTo>
        <relationshipLabel>Costs</relationshipLabel>
        <relationshipName>Costs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Investment__c</fullName>
        <inlineHelpText>The investment that the cost is related to</inlineHelpText>
        <label>Investment</label>
        <referenceTo>ccpe_ppm__Investment__c</referenceTo>
        <relationshipLabel>Costs</relationshipLabel>
        <relationshipName>Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Total_Actual_Cost__c</fullName>
        <inlineHelpText>The total amount of actual costs for this item of spend on the investment</inlineHelpText>
        <label>Total Actual Cost</label>
        <summarizedField>ccpe_ppm__Cost_Resource_Schedule__c.ccpe_ppm__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ccpe_ppm__Cost_Resource_Schedule__c.ccpe_ppm__Status__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </summaryFilterItems>
        <summaryForeignKey>ccpe_ppm__Cost_Resource_Schedule__c.ccpe_ppm__Cost__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccpe_ppm__Total_Planned_Cost__c</fullName>
        <inlineHelpText>The total amount of planned costs for this item of spend on the investment</inlineHelpText>
        <label>Total Planned Cost</label>
        <summarizedField>ccpe_ppm__Cost_Resource_Schedule__c.ccpe_ppm__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ccpe_ppm__Cost_Resource_Schedule__c.ccpe_ppm__Status__c</field>
            <operation>equals</operation>
            <value>Planned</value>
        </summaryFilterItems>
        <summaryForeignKey>ccpe_ppm__Cost_Resource_Schedule__c.ccpe_ppm__Cost__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Cost</label>
    <listViews>
        <fullName>ccpe_ppm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ccpe_ppm__Cannot_associate_with_parent_area</fullName>
        <active>true</active>
        <description>Only sub-areas can be associated with a cost</description>
        <errorConditionFormula>NOT(ISBLANK(ccpe_ppm__Area__c)) &amp;&amp; ISBLANK(ccpe_ppm__Area__r.project_cloud__Area__c)</errorConditionFormula>
        <errorDisplayField>ccpe_ppm__Area__c</errorDisplayField>
        <errorMessage>Costs cannot be associated with parent areas.</errorMessage>
    </validationRules>
</CustomObject>